# VA_project

./: .gitignore  README.md  panorama.py  panorama.spec  pyproject.toml  requirements.txt  special_effect.spec
docs/: panorama.md  special_effect.md
src/: panorama.py  special_effect.py
